# icha

./: .env  .env.sample  .gitignore  .gitmodules  Dockerfile_back  Dockerfile_front  LICENSE  README.md  app.py  generate-openapi.yml  index.html  next.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: back.yml  cd.yml  front.yml  test.yml
app/: GachaCarousel.tsx  GachaCarouselElement.tsx  Theme.tsx  error.tsx  layout.tsx  page.tsx  util.ts
app/_client/: _error.ts  api.ts  serverActionApi.ts
app/_footer/: Footer.tsx
app/_header/: Header.tsx  HeaderNav.tsx  LoginButton.tsx  RegisterUserButton.tsx  UserMenu.tsx  UserMenuButton.tsx  UserNav.tsx
app/_hook/: useFetch.tsx  useMedia.ts
app/_manager/: AuthApiProvider.tsx  LocalStorageProvider.tsx  LoginManager.ts  TokenProvider.tsx  UserProvider.tsx  localStorageManager.ts  loginManager.ts  userManager.ts
app/_unit/: BigButton.tsx  ErrorMessage.tsx  FormControlLabelWrap.tsx  ImageEdit.tsx  Img.tsx  LoadableButton.tsx  Main.tsx  PageTitle.tsx  PasswordTextField.tsx  RedirectLogin.tsx  RequireLogin.tsx  TextInput.tsx  Textarea.tsx  Theme.tsx  YesNoElseInput.tsx
app/client/: api.ts  serverActionApi.ts
dev-data/: users.acl
icha/: api.py  apis.py  cmd.py  data.py  env.py  error.py  model.py  request.py  response.py  table.py  tokens.py
migrations/: env.py
script/: App.tsx  AppRouter.tsx  Main.tsx  MainRouter.tsx  api.ts  error.ts
test/: __init__.py  base.py  conftest.py  gacha_test.py  token_test.py  user_test.py
(+123 files in other folders)
