[project]
name = "icha"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kigawa", email = "contact@kigawa.net" }
]
dependencies = [
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.1",
    "fastapi>=0.111.0",
    "passlib>=1.7.4",
    "asyncmy>=0.2.9",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-env>=1.1.3",
    "aiosqlite>=0.20.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
